--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -40,15 +40,13 @@
     color: #000000;
 }
 
-.header_link_login, .header_link_login_second {
+.header_link_login {
     background-color: #F5F5F5;
-    width: 100px;
     display: flex;
-    border-radius: 100px;
-    padding: 10px;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    flex-shrink: 0;
+    border-radius: 100px;
+    padding: 10px 20px;
     color: #555;
     text-align: center;
     font-family: Noto Sans KR, serif;
@@ -62,13 +60,14 @@
     right: 100px;
     top: 115px;
     text-decoration: none;
+    cursor: pointer;
 }
 
-.header_link_login_second {
-    right: 200px;
+.header_link_login img {
+    margin-left: 10px;
 }
 
-.header_link_login:hover, .header_link_login_second:hover {
+.header_link_login:hover {
     font-weight: 700;
     color: #000000;
 }
