--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,13 +1,25 @@
 .loginBackground {
-    z-index: -1;
-    width: 100%;
+    width: 1920px;
     height: 100vh;
     flex-shrink: 0;
     border-radius: 0px 0px 0px 200px;
-    background: linear-gradient(264deg, #EDF9F7 3.98%, #F1F5FF 98.44%);
-    display: flex;
+    background-color: #FFFFFF;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
+}
+
+.loginBackground::before {
+    content: '';
+    position: absolute;
+    width: 1455px;
+    height: 601px;
+    flex-shrink: 0;
+    background: linear-gradient(264deg, #EDF9F7 3.98%, #F1F5FF 98.44%);
+    border-radius: 0px 0px 0px 200px;
+    top: 20%;
+    left: 10%;
+    z-index: -1;
 }
 
 .loginContainer {
@@ -26,9 +38,12 @@
 
 .loginTitle {
     color: #000;
-    font-family: Noto Sans KR, sans-serif;
-    font-size: 32px;
+    font-family: Noto Sans KR, serif;
+    font-size: 40px;
+    font-style: normal;
     font-weight: 400;
+    line-height: normal;
+    text-align: center;
     margin-bottom: 20px;
 }
 
@@ -40,8 +55,10 @@
 }
 
 .inputGroup {
+    width: 480px;
+    height: 60px;
     flex-shrink: 0;
-    margin-bottom: 15px;
+    margin-bottom: 40px;
 }
 
 .input {
@@ -57,6 +74,8 @@
 }
 
 .inputError {
+    width: 480px;
+    height: 60px;
     border: 1px solid red;
 }
 
@@ -66,7 +85,7 @@
     flex-shrink: 0;
     padding: 15px;
     color: #FFF;
-    background: #000;
+    background-color: #A7CDCC;
     border: none;
     border-radius: 5px;
     font-family: Noto Sans KR, sans-serif;
@@ -82,9 +101,10 @@
 
 .linkContainer {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 480px;
+    margin-top: 10px;
 }
 
 .findId, .findPassword, .join {
@@ -92,6 +112,7 @@
     font-family: Noto Sans KR, sans-serif;
     font-size: 14px;
     cursor: pointer;
+    margin: 0 10px;
 }
 
 .socialLoginContainer {
@@ -99,6 +120,27 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
+    align-items: center;
+}
+
+.hrContainer {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.hrStyle {
+    flex: 1;
+    border: none;
+    border-top: 1px solid #333;
+    margin: 0 10px;
+}
+
+.hrText {
+    font-size: 14px;
+    color: #333;
+    white-space: nowrap;
 }
 
 .kakaoButton, .naverButton {
@@ -116,9 +158,20 @@
 }
 
 .kakaoButton {
-    background: #FFEB00;
+    display: flex;
+    width: 480px;
+    padding: 19px 152px;
+    align-items: center;
+    gap: 15px;
+    background: #FEE500;
 }
 
 .naverButton {
-    background: #1EC800;
+    display: flex;
+    width: 480px;
+    padding: 19px 154px;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    background: #03C75A;
 }
