--- a/src/styles/Find.module.css
+++ b/src/styles/Find.module.css
@@ -108,3 +108,24 @@
     font-weight: 400;
     line-height: normal;
 }
+
+.alert {
+    margin-top: 20px;
+    padding: 15px;
+    width: 480px;
+    border-radius: 5px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.alertSuccess {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+.alertError {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
