--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -2,13 +2,11 @@
     width:1920px;
     flex-shrink: 0;
     border-bottom: 1px solid #C4C4C4;
+    border-bottom: 1px solid #C4C4C4;
     backdrop-filter: blur(2px);
     flex-direction: column;
-    background: #FFFFFF;
 }
 .header {
-    margin-left:109px;
-    margin-bottom:46px;
     height: 91px;
     flex-shrink: 0;
     border-bottom: 1px solid #C4C4C4;
@@ -38,7 +36,7 @@
 }
 
 .logoImg, .email,.github,.copyright {
-    margin-left:205px;
+    margin-left:202px;
     color: #FFF;
     font-family: Noto Sans KR, serif;
     font-size: 17px;
@@ -48,6 +46,5 @@
 }
 
 .logoImg {
-    margin-left:180px;
     margin-top: 53px;
 }
