--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -27,7 +27,7 @@
 }
 
 .onboarding_img {
-    display: block;
+    display: inline-block;
     margin:0;
     height: 610px;
     max-height: 610px;
@@ -41,7 +41,7 @@
     line-height: normal;
     position: absolute;
     top: 25%;
-    left: 5%;
+    left: 7%;
     transform: translateY(-50%);
     text-align: left;
     z-index: 1;
@@ -55,7 +55,7 @@
     line-height: normal;
     position: absolute;
     top: 35%;
-    left: 5%;
+    left: 7%;
     transform: translateY(-50%);
     text-align: left;
     z-index: 1;
@@ -66,7 +66,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .onboarding_search {
@@ -151,14 +150,13 @@
 
 .button_container {
     display: flex;
-    justify-content: space-around;
     align-items: center;
     gap: 20px;
     margin-top: 40px;
 }
 
 .onboarding_show {
-    margin-left: 300px;
+    margin-left:1000px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -171,6 +169,7 @@
 }
 
 .choose_recomend {
+    margin-left:109px;
     color: #000;
     font-family: Noto Sans KR, serif;
     font-size: 40px;
@@ -202,11 +201,13 @@
 }
 
 .onboard_choose_btn {
+    margin-left: 109px;
     background: #a7cdcc;
 }
 
 .onboard_choose_btn_more {
     float: right;
+    margin-right: 60px;
 }
 
 .onboard_choose_btn:hover,
@@ -224,7 +225,7 @@
     border-radius: 0px 0px 30px 0px;
     background: #fff;
     text-align: center;
-    margin-left: 35px;
+    margin-left: 109px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
