--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -1,114 +1,71 @@
 .onboard {
-    width:1920px;
-    height:100vh;
+    margin: 0;
+    padding: 0;
     flex-shrink: 0;
-    background-color: #FFFFFF;
+    position: relative;
+    overflow-x:hidden;
 }
 
-.onbaord::before {
+.onboard::before {
     content: '';
     position: absolute;
     width: 1455px;
     height: 601px;
     border-radius: 0px 0px 0px 200px;
-    background: linear-gradient(264deg, #EDF9F7 3.98%, #F1F5FF 98.44%);
-    top: 20%;
-    left: 10%;
+    background: linear-gradient(264deg, #edf9f7 3.98%, #f1f5ff 98.44%);
+    top: 10%;
+    left: 25%;
     z-index: -1;
 }
 
 .onboarding_top {
-    display: inline-flex;
-    justify-content: center;
-    align-items: start;
-    gap: 20px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: flex-start;
+    position: relative;
 }
 
 .onboarding_img {
-    margin-left: 116px;
-    flex-shrink: 0;
-    border-radius: 30px 0px;
-    background: rgba(0, 0, 0, 0.17);
+    display: inline-block;
+    margin:0;
+    height: 610px;
+    max-height: 610px;
+}
+
+.onboarding_explain_div {
+    color: #fff;
+    font-family: 'Noto Sans KR', serif;
+    font-size: 37px;
+    font-weight: 800;
+    line-height: normal;
+    position: absolute;
+    top: 25%;
+    left: 7%;
+    transform: translateY(-50%);
+    text-align: left;
+    z-index: 1;
 }
 
 .onboarding_explain_p {
-    color: #FFF;
-    font-family: Noto Sans KR, serif;
+    color: #fff;
+    font-family: 'Noto Sans KR', serif;
     font-size: 25px;
-    font-style: normal;
     font-weight: 500;
     line-height: normal;
-}
-
-.onboarding_view, .onboarding_show {
-    flex: 1;
-    padding: 20px;
-}
-
-.go_link {
-    border-radius: 20px;
-    float: right;
-    display: flex;
-    width:100px;
-    padding:20px;
-    height: 35px;
-    flex-direction: column;
-    justify-content: center;
-    flex-shrink: 0;
-    color: #FFF;
-    background: black;
-    text-align: center;
-    font-family: Noto Sans KR, serif;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-
-.time, .travel {
-    width: 346px;
-    height: 190.611px;
-    flex-shrink: 0;
-}
-
-.recommended_destinations {
-    padding: 20px 0;
+    position: absolute;
+    top: 35%;
+    left: 7%;
+    transform: translateY(-50%);
     text-align: left;
-    margin-top: 76px;
-    margin-left:116px;
+    z-index: 1;
 }
 
-.choose_recomend {
-    color: #000;
-    font-family: Noto Sans KR, serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-}
-
-.onboard_choose_btn_more, .onboard_no_choose_btn, .onboard_choose_btn {
-    width: 90px;
-    height: 38px;
-    flex-shrink: 0;
-    border-radius: 40px;
-    border:none;
-    background: #E8E8E8;
-    margin-left:10px;
-}
-
-.onboard_choose_btn {
-    background: #A7CDCC;
-}
-
-.onboard_choose_btn_more {
-    float: right;
-}
-
-.img_slider_view {
-
-    flex-shrink: 0;
-    border-radius: 30px 0px 0px 0px;
+.onboarding_view {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .onboarding_search {
@@ -116,11 +73,12 @@
     height: 74px;
     flex-shrink: 0;
     border-radius: 20px;
-    border: 2px solid #004A55;
-    background: #FFF;
+    border: 2px solid #004a55;
+    background: #fff;
     display: flex;
     align-items: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
 
 .filter_select {
@@ -146,141 +104,155 @@
     color: #aaa;
 }
 
-.search_input:focus, .filter_select:focus {
+.search_input:focus,
+.filter_select:focus {
     box-shadow: 0 0 0 2px rgba(100, 100, 255, 0.5);
 }
 
-.onboarding_show {
+.viewBtn {
+    background: rgba(255, 255, 255, 0.75);
+    width: 370px;
+    height: 239px;
+    border-radius: 30px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.go_link {
+    display: flex;
+    justify-content: center;
     align-items: center;
+    border-radius: 50%;
+    background-color: black;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left:50px;
+}
+
+.go_link:hover {
+    background-color: #333;
+}
+
+.time,
+.travel {
+    margin-left:160px;
+    object-fit: cover;
+    margin-bottom: 10px;
+}
+
+.viewBtn:hover {
+    background-color: #f5f5f5;
 }
 
 .button_container {
-    margin-top: 45px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.viewBtn {
-    flex: 1;
-    margin: 0 10px;
-    text-align: center;
-    padding: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 370px;
-    height: 316px;
-    flex-shrink: 0;
-    border-radius: 30px;
-    border: 1px solid #D9D9D9;
-    background: #FFF;
-}
-
-.onboarding_view {
-    position: relative;
-    width: 100%;
-    height: 440px;
     display: flex;
     align-items: center;
-    justify-content: left;
+    gap: 20px;
+    margin-top: 40px;
 }
 
-.onboarding_explain_div {
-    color: #FFF;
+.onboarding_show {
+    margin-left:1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.recommended_destinations {
+    text-align: left;
+    margin-top: 76px;
+}
+
+.choose_recomend {
+    margin-left:109px;
+    color: #000;
     font-family: Noto Sans KR, serif;
-    font-size: 37px;
+    font-size: 40px;
     font-style: normal;
-    font-weight: 800;
+    font-weight: 600;
     line-height: normal;
-    position: absolute;
-    top: 25%;
-    left: 46%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    z-index: 1;
 }
 
-.onboarding_explain_p {
-    position: absolute;
-    top: 30%;
-    left: 51%;
-    width: 750px;
-    transform: translateX(-50%);
-    color: #FFF;
-    font-size: 25px;
-    text-align: center;
-    z-index: 1;
+.choose_recommend {
+    color: #000;
+    font-family: 'Noto Sans KR', serif;
+    font-size: 40px;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 20px;
 }
 
-.slider_container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-}
-
-.slider_button {
-    background: none;
+.onboard_choose_btn_more,
+.onboard_no_choose_btn,
+.onboard_choose_btn {
+    width: 90px;
+    height: 38px;
+    border-radius: 40px;
     border: none;
-    color: #333;
-    font-size: 24px;
+    background: #e8e8e8;
+    margin-left: 10px;
     cursor: pointer;
-    padding: 10px 20px;
-    user-select: none;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
+    transition: background-color 0.3s;
 }
 
-.slider_button:hover {
-    background-color: rgba(255, 255, 255, 0.8);
+.onboard_choose_btn {
+    margin-left: 109px;
+    background: #a7cdcc;
+}
+
+.onboard_choose_btn_more {
+    float: right;
+    margin-right: 60px;
+}
+
+.onboard_choose_btn:hover,
+.onboard_no_choose_btn:hover,
+.onboard_choose_btn_more:hover {
+    background-color: #d0d0d0;
 }
 
 .img_slider_container {
-    margin-top:39px;
+    margin-top: 39px;
     flex: 1;
-    width: 400px;
+    width: 100%;
+    max-width:400px;
     height: 433px;
     border-radius: 0px 0px 30px 0px;
-    background: #FFF;
+    background: #fff;
     text-align: center;
-    margin-left:35px;
+    margin-left: 109px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.img_slider_explain {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top:39px;
+.slider_img {
+    width: 100%;
+    max-width:400px;
+    height: 280px;
+    object-fit: cover;
+    border-radius: 30px 0px 0px 0px;
 }
 
 .slider_text_p {
-    width: 76.667px;
     color: #000;
-    font-family: Noto Sans KR, serif;
+    font-family: 'Noto Sans KR', serif;
     font-size: 25px;
-    font-style: normal;
     font-weight: 500;
     line-height: normal;
     margin-top: 10px;
 }
 
 .slider_text_p_detail {
-    width: 318.889px;
     color: #848282;
-    font-family: Noto Sans KR, serif;
+    font-family: 'Noto Sans KR', serif;
     font-size: 18px;
-    font-style: normal;
     font-weight: 500;
     line-height: normal;
     margin-top: 5px;
-}
-
-.slider_img {
-    width: 400px;
-    height: 280px;
-    border-radius: 30px 0px 0px 0px;
-    object-fit: cover;
 }
 
 .slider_container {
@@ -289,12 +261,12 @@
     justify-content: space-between;
     position: relative;
     width: 100%;
-    overflow: hidden; /* 슬라이더의 오버플로우를 숨깁니다 */
-    cursor: grab; /* 드래그 가능한 커서를 설정합니다 */
+    cursor: grab;
+    flex-wrap: wrap;
 }
 
 .slider_container:active {
-    cursor: grabbing; /* 드래그 중일 때 커서를 변경합니다 */
+    cursor: grabbing;
 }
 
 .slider_button {
@@ -319,4 +291,41 @@
     width: 100%;
 }
 
+.onboarding_content {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+}
 
+.onboarding_text {
+    flex: 1;
+    text-align: left;
+    color: #fff;
+    padding-right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 50%;
+}
+
+
+.viewTitle {
+    margin-left:41px;
+    color: #555;
+    font-family: Noto Sans KR, sans-serif;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.iconContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
