--- a/src/styles/Find.module.css
+++ b/src/styles/Find.module.css
@@ -8,13 +8,14 @@
 }
 
 .pageContainer {
+    width: 890px;
+    height: 916px;
+    flex-shrink: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-color: #f7f7f7;
-    padding: 20px;
+    background-color: #FFFFFF;
 }
 
 .tabContainer {
@@ -37,10 +38,19 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    border: 1px solid #848282;
+    background-color:#FFFFFF;
+    border: 1px solid transparent;
+    border-bottom: 1px solid #848282;
+    cursor: pointer;
 }
 
-.tabButton:hover, .activeTab {
+.tabButton.activeTab {
+    border-bottom: none;
+    border: 1px solid #76ADAC;
+    color: #000;
+}
+
+.tabButton:hover {
     border: 1px solid #76ADAC;
     color: #000;
 }
@@ -50,6 +60,20 @@
     width: 480px;
 }
 
+.findText {
+    display: flex;
+    width: 480px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #848282;
+    font-family: NOto Sans KR, sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
 .input {
     padding: 12px;
     width: 480px;
@@ -57,6 +81,13 @@
     border: 1px solid #ccc;
     font-size: 16px;
     box-sizing: border-box;
+}
+
+.errorText {
+    color: red;
+    font-family: Noto Sans KR, sans-serif;
+    font-size: 14px;
+    margin-top: 5px;
 }
 
 .submitButton {
@@ -90,6 +121,23 @@
     height: 1px;
     background-color: #848282;
     border: none;
+}
+
+.completeText {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 445px;
+    height: 60px;
+    flex-direction: row;
+    flex-shrink: 0;
+    color: #333;
+    font-family: Noto Sans KR, sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-right:50px;
 }
 
 .FindIdBox {
@@ -128,4 +176,52 @@
     background-color: #f8d7da;
     color: #721c24;
     border: 1px solid #f5c6cb;
+}
+
+.hint {
+    display: flex;
+    width: 480px;
+    height: 38px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #555;
+    font-family: Noto Sans KR, sans-serif;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.submitButton.disabledButton {
+    background-color: #ccc;
+    cursor: not-allowed;
+    color: #FFFFFF;
+}
+
+.submitButton.disabledButton:hover {
+    background-color: #ccc;
+}
+
+.userIdText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #000;
+    text-align: center;
+    font-family: Noto Sans KR, sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.userIdExplain {
+    color: #848282;
+    font-family: Noto Sans KR, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
