--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,4 +1,4 @@
-.header_menu {
+.headerMenu {
     width: auto;
     max-width: 1920px;
     height: 5.69rem;
@@ -20,7 +20,7 @@
     margin-left: 109px;
 }
 
-.header_link {
+.headerLink {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,18 +38,18 @@
     margin: 0 10px;
 }
 
-.header_link_a {
+.headerLinkA {
     color: #757575;
     text-decoration: none;
     font-size: 16px;
 }
 
-.header_link_a:hover {
+.headerLinkA:hover {
     font-weight: 700;
     color: #000000;
 }
 
-.header_link_login {
+.headerLinkLogin {
     background-color: #F5F5F5;
     display: flex;
     align-items: center;
@@ -71,11 +71,11 @@
     margin-right: 20px;
 }
 
-.header_link_login img {
+.headerLinkLogin img {
     margin-left: 10px;
 }
 
-.header_link_login:hover {
+.headerLinkLogin:hover {
     font-weight: 700;
     color: #000000;
 }
