--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -1,13 +1,8 @@
 .joinBackground {
-    width: auto;
-    max-width:1920px;
-    height: 100vh;
+    margin: 0;
+    padding: 0;
     flex-shrink: 0;
-    border-radius: 0px 0px 0px 200px;
-    background-color: #FFFFFF;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
 }
 
 .joinBackground::before {
@@ -15,20 +10,24 @@
     position: absolute;
     width: 1455px;
     height: 601px;
-    flex-shrink: 0;
-    background: linear-gradient(264deg, #EDF9F7 3.98%, #F1F5FF 98.44%);
     border-radius: 0px 0px 0px 200px;
-    top: 20%;
-    left: 10%;
+    background: linear-gradient(264deg, #EDF9F7 3.98%, #F1F5FF 98.44%);
+    top: 10%;
+    left: 54%;
     z-index: -1;
 }
 
 .joinContainer {
+    margin-top:82px;
+    margin-left:74%;
     width: 756px;
+    height: 814px;
     padding: 20px;
-    border-radius: 30px 0px;
+    border-radius: 30px;
     background: #FFF;
     box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.30);
+    flex-direction: column;
+    align-items: center;
 }
 
 .joinTitle {
