--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -29,7 +29,7 @@
     padding: 0 20px;
     color: #333;
     text-align: center;
-    font-family: 'Noto Sans KR', serif;
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: normal;
@@ -58,7 +58,7 @@
     padding: 10px 20px;
     color: #555;
     text-align: center;
-    font-family: 'Noto Sans KR', serif;
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: normal;
