--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,65 +1,4 @@
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 100;
-    src: url('/public/assets/fonts/NotoSansKR-Thin.ttf') format('truetype');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 200;
-    src: url('/public/assets/fonts/NotoSansKR-ExtraLight.ttf') format('truetype');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 300;
-    src: url('/public/assets/fonts/NotoSansKR-Light.ttf') format('truetype');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 400;
-    src: url('/public/assets/fonts/NotoSansKR-Regular.ttf') format('truetype');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 500;
-    src: url('/public/assets/fonts/NotoSansKR-Medium.ttf') format('truetype');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 600;
-    src: url('/public/assets/fonts/NotoSansKR-SemiBold.ttf') format('truetype');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 700;
-    src: url('public/assets/fonts/NotoSansKR-Bold.ttf') format('truetype');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 800;
-    src: url('/public/assets/fonts/NotoSansKR-ExtraBold.ttf') format('truetype');
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Noto Sans KR';
-    font-weight: 900;
-    src: url('/public/assets/fonts/NotoSansKR-Black.ttf') format('truetype');
-    font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 html,
 body {
