--- a/src/styles/onBoard.module.css
+++ b/src/styles/onBoard.module.css
@@ -34,7 +34,7 @@
 
 .onBoardingExplainDiv {
     color: #fff;
-    font-family: 'Noto Sans KR', serif;
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 37px;
     font-weight: 800;
     line-height: normal;
@@ -48,7 +48,7 @@
 
 .onBoardingExplainP {
     color: #fff;
-    font-family: 'Noto Sans KR', serif;
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 25px;
     font-weight: 500;
     line-height: normal;
@@ -182,7 +182,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    font-family: 'Noto Sans KR', serif;
+    font-family: 'Noto Sans KR', sans-serif;
     margin-bottom: 20px;
 }
 
@@ -239,7 +239,7 @@
 
 .sliderTextP {
     color: #000;
-    font-family: 'Noto Sans KR', serif;
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 25px;
     font-weight: 500;
     line-height: normal;
@@ -248,7 +248,7 @@
 
 .sliderTextPDetail {
     color: #848282;
-    font-family: 'Noto Sans KR', serif;
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 18px;
     font-weight: 500;
     line-height: normal;
