--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,8 +2,13 @@
 
 html,
 body {
-    padding: 0;
     margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     scroll-behavior: smooth;
     font-family: 'Noto Sans KR', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
