--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -3,29 +3,36 @@
     padding: 0;
     flex-shrink: 0;
     position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .joinBackground::before {
     content: '';
     position: absolute;
-    width: 1455px;
+    width: 80%;
+    max-width: 1455px;
     height: 601px;
-    border-radius: 0px 0px 0px 200px;
+    border-radius: 0 0 0 200px;
     background: linear-gradient(264deg, #EDF9F7 3.98%, #F1F5FF 98.44%);
     top: 10%;
-    left: 54%;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: -1;
 }
 
 .joinContainer {
-    margin-top:82px;
-    margin-left:74%;
-    width: 756px;
+    margin-top: 82px;
+    margin: 0 auto;
+    width: 80%;
+    max-width: 756px;
     height: 814px;
     padding: 20px;
     border-radius: 30px;
     background: #FFF;
-    box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.30);
+    box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.30);
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
@@ -41,15 +48,16 @@
 }
 
 .inputGroup {
-    width: 480px;
+    width: 100%;
+    max-width: 480px;
     height: 55px;
     flex-shrink: 0;
     margin-bottom: 40px;
-    margin-left:20%;
 }
 
 .input {
-    width: 480px;
+    width: 100%;
+    max-width: 480px;
     height: 55px;
     padding: 10px;
     border: 1px solid #848282;
@@ -59,7 +67,8 @@
 }
 
 .inputError {
-    width: 480px;
+    width: 100%;
+    max-width: 480px;
     height: 55px;
     border: 1px solid red;
 }
@@ -72,7 +81,8 @@
 }
 
 .submitButton {
-    width: 480px;
+    width: 100%;
+    max-width: 480px;
     height: 55px;
     background-color: #A7CDCC;
     color: white;
@@ -81,7 +91,6 @@
     border-radius: 5px;
     cursor: pointer;
     margin-top: 20px;
-    margin-left:20%;
 }
 
 .notificationMessage {
@@ -93,32 +102,22 @@
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    margin-left:20%;
+    width: 100%;
+    max-width: 480px;
 }
 
 .emailGroup {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 480px;
+    width: 100%;
+    max-width: 480px;
     height: 55px;
     margin-bottom: 40px;
-    margin-left:20%;
-}
-
-.emailInput {
-    width: 480px;
-    height: 55px;
-    padding: 10px;
-    border: 1px solid #848282;
-    border-radius: 5px;
-    background: #FFF;
-    font-size: 16px
 }
 
 .emailInput {
     flex: 1;
-    width: 480px;
     height: 55px;
     padding: 10px;
     border: 1px solid #848282;
