--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,8 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    overflow-x: hidden;
+    box-sizing: border-box;
     align-items: center;
     justify-content: center;
     scroll-behavior: smooth;
@@ -22,6 +24,12 @@ a {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 button {
@@ -90,4 +98,9 @@ button:focus {
 
 ::-webkit-scrollbar-track {
     background: #f1f1f1;
+}
+
+body::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
