--- a/src/styles/Find.module.css
+++ b/src/styles/Find.module.css
@@ -5,17 +5,20 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-top: 83px;
+    margin-bottom:71px;
 }
 
 .pageContainer {
-    width: 890px;
-    height: 916px;
+    width: 619px;
+    height: 755px;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #FFFFFF;
+    margin:20px 136px;
 }
 
 .tabContainer {
@@ -39,14 +42,14 @@
     font-weight: 400;
     line-height: normal;
     background-color:#FFFFFF;
-    border: 1px solid transparent;
-    border-bottom: 1px solid #848282;
+    border: 1px solid #848282;
+    border-bottom: 1px solid #76ADAC;
     cursor: pointer;
 }
 
 .tabButton.activeTab {
-    border-bottom: none;
     border: 1px solid #76ADAC;
+    border-bottom: none;
     color: #000;
 }
 
