--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -16,22 +16,21 @@
     height: 601px;
     border-radius: 0 0 0 200px;
     background: linear-gradient(264deg, #EDF9F7 3.98%, #F1F5FF 98.44%);
-    top: 10%;
-    left: 50%;
+    top: 0;
+    left: 61.8%;
     transform: translateX(-50%);
     z-index: -1;
 }
 
 .joinContainer {
     margin-top: 82px;
-    margin: 0 auto;
     width: 80%;
     max-width: 756px;
     height: 814px;
     padding: 20px;
     border-radius: 30px;
     background: #FFF;
-    box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.30);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.30);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,32 +44,38 @@
     font-weight: 400;
     line-height: normal;
     text-align: center;
+    margin-bottom: 54px;
+    margin-top:64px;
 }
 
 .inputGroup {
     width: 100%;
     max-width: 480px;
-    height: 55px;
+    height: auto;
     flex-shrink: 0;
-    margin-bottom: 40px;
+    margin-bottom: 15px;
+    position: relative;
 }
 
 .input {
     width: 100%;
     max-width: 480px;
     height: 55px;
-    padding: 10px;
     border: 1px solid #848282;
     border-radius: 5px;
     background: #FFF;
     font-size: 16px;
+    padding-left:15px;
 }
 
 .inputError {
     width: 100%;
+    font-family: Noto Sans KR, sans-serif;
+    font-size: 16px;
     max-width: 480px;
     height: 55px;
     border: 1px solid red;
+    padding-left:15px;
 }
 
 .errorText {
@@ -82,15 +87,15 @@
 
 .submitButton {
     width: 100%;
-    max-width: 480px;
     height: 55px;
     background-color: #A7CDCC;
-    color: white;
+    color: #ffffff;
     font-size: 18px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-top: 20px;
+    font-weight: 700;
 }
 
 .notificationMessage {
@@ -99,43 +104,44 @@
 }
 
 .checkboxGroup {
+    margin-top:15px;
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
     width: 100%;
     max-width: 480px;
 }
 
 .emailGroup {
+    margin:15px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    max-width: 480px;
+    width: 500px;
+    max-width: 500px;
     height: 55px;
-    margin-bottom: 40px;
 }
 
 .emailInput {
     flex: 1;
     height: 55px;
-    padding: 10px;
     border: 1px solid #848282;
     border-radius: 5px;
     background: #FFF;
     font-size: 16px;
+    padding-left:15px;
 }
 
 .emailButton {
     width: 106px;
     height: 55px;
     background-color: #363636;
-    color: white;
+    color: #ffffff;
     font-size: 16px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     margin-left: 10px;
+    font-weight: 700;
 }
 
 .verifiedText {
@@ -148,11 +154,11 @@
 .inputVerification {
     flex: 1;
     height: 55px;
-    padding: 10px;
     border: 1px solid #848282;
     border-radius: 5px;
     background: #FFF;
     font-size: 16px;
+    padding-left:15px;
 }
 
 .verifyButton {
